feat: application works

--- a/app/src/.env.sample
+++ b/app/src/.env.sample
@@ -5,3 +5,4 @@ DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=pass123
 SECRET_KEY=1HyftmH8tPzutU46s2MXM87QuF844WKm
+JWT_SECRET_KEY=lets_play_sum_games_man
