--- a/app/src/package.json
+++ b/app/src/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
